fixed overflow-x bug

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #f5d9df;
     font-family: "numuto", sans-serif;
+    overflow-x: hidden;
 }
 
 #main-navbar{
